adding jwt security middleware

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,5 +1,7 @@
 PORT = 3001
 
+CRYPT_KEY=2b6dba9e-12f6-4a82-93ae-f6964937afb7-00d8eb7d-0e9c-40b0-9804-1ad61dca74dc-53cdf9b1-4a5a-4fb8-9068-afead3127120
+
 DATABASE_USER=postgres
 DATABASE_PASS=postgres
 DATABASE_HOST=localhost
